# atmb-us-non-cmra

./: Cargo.toml  LICENSE  README.md
.github/workflows/: update-mailboxes.yml
result/: mailboxes.csv
src/: main.rs  record.rs  smarty.rs  utils.rs
src/atmb/: mod.rs  model.rs  page.rs
test_data/: https___www.anytimemailbox.com_l_usa.html  https___www.anytimemailbox.com_l_usa_alabama.html  https___www.anytimemailbox.com_s_birmingham-120-19th-street-north.html
