[package]
name = "atmb-us-physical"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
csv = "1.3.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
regex = "1.10.5"
reqwest = { version = "0.12.4", features = ["json"] }
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
smarty-rust-sdk = "0.4.1"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
