[package]
name = "atmb-us-physical"
version = "0.1.0"
edition = "2021"

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
color-eyre = "0.6.3"
csv = "1.3.1"
futures = "0.3.31"
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
smarty-rust-sdk = "0.4.4"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
